--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,16 +2,6 @@
 
 
 {{#each urls}}
-
-<article class="card">
-    <div class="card-body">
-        <p>{{this.origin}}</p>
-        <p>{{this.shorURL}}</p>
-        <a href="#" class="btn btn-danger">Eliminar</a>
-        <a href="#" class="btn btn-warning">Editar</a>
-        <a href="#" class="btn btn-info">Copiar</a>
-    </div>
-</article>
-
+    {{> cards}}
 {{/each}}
 <br>
