--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -10,13 +10,13 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login">LogIn</a>
+          <a class="nav-link" href="/auth/login">LogIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">LogOut</a>
+          <a class="nav-link" href="/auth/logout">LogOut</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/signin">SignIn</a>
+          <a class="nav-link" href="/auth/signin">SignIn</a>
         </li>
       </ul>
     </div>
