--- a/views/components/Form.hbs
+++ b/views/components/Form.hbs
@@ -1,4 +1,4 @@
 <form action="/" method="POST">
-    <input type="text" placeholder="Ingrese Url" name="origin" class="form-control my-2">
+    <input type="text" placeholder="Ingrese Url" name="origenUrl" class="form-control my-2">
     <button type="submit" class="btn btn-primary w-100 mb-2">Agregar Url</button>
 </form>
