--- a/views/components/cards.hbs
+++ b/views/components/cards.hbs
@@ -1,9 +1,9 @@
 
 <article class="card">
     <div class="card-body">
-        <p>{{this.origin}}</p>
-        <p>{{this.shorURL}}</p>
-        <a href="#" class="btn btn-danger">Eliminar</a>
+        <p>{{item.origin}}</p>
+        <p>{{item.shortURL}}</p>
+        <a href="/eliminar/{{item._id}}" class="btn btn-danger">Eliminar</a>
         <a href="#" class="btn btn-warning">Editar</a>
         <a href="#" class="btn btn-info">Copiar</a>
     </div>
