--- a/views/components/Form.hbs
+++ b/views/components/Form.hbs
@@ -1,4 +1,16 @@
+{{#if url}}
+
+<form action="/editar/{{url._id}}" method="POST">
+    <input value="{{url.origin}}" type="text" placeholder="Ingrese Url" name="origenUrl" class="form-control my-2">
+    <button type="submit" class="btn btn-warning w-100 mb-2">Agregar Url</button>
+</form>
+
+    {{else}}
+
+
 <form action="/" method="POST">
     <input type="text" placeholder="Ingrese Url" name="origenUrl" class="form-control my-2">
     <button type="submit" class="btn btn-primary w-100 mb-2">Agregar Url</button>
 </form>
+
+{{/if}}
