--- a/views/components/cards.hbs
+++ b/views/components/cards.hbs
@@ -5,6 +5,6 @@
         <p>{{item.shortURL}}</p>
         <a href="/eliminar/{{item._id}}" class="btn btn-danger">Eliminar</a>
         <a href="/editar/{{item._id}}" class="btn btn-warning">Editar</a>
-        <a href="#" class="btn btn-info">Copiar</a>
+        <button data-tocar="{{item.shortURL}}" href="#" class="btn btn-info">Copiar</button>
     </div>
 </article>
