--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -13,10 +13,7 @@
           <a class="nav-link" href="/auth/login">LogIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/logout">LogOut</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/auth/signin">SignIn</a>
+          <a class="nav-link" href="/auth/register">Register</a>
         </li>
       </ul>
     </div>
