agregado formulario de login

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,22 @@
-<h1>Register</h1>
+<h1>Registro de nuevos usuarios</h1>
+
+<form action="/auth/register" method="post">
+    <input
+        class="form-control mb-2"
+        name="userName"
+        placeholder="ingrese nombre"
+        type="text"
+    >
+    <input
+        class="form-control mb-2"
+        name="email"
+        placeholder="ingrese email"
+        type="text"
+    >
+    <input
+        class="form-control mb-2"
+        name="password"
+        placeholder="ingrese password"
+        type="password"
+    >
+</form>
