--- a/views/register.hbs
+++ b/views/register.hbs
@@ -6,17 +6,28 @@
         name="userName"
         placeholder="ingrese nombre"
         type="text"
+        value="usuariofalso"
     >
     <input
         class="form-control mb-2"
         name="email"
         placeholder="ingrese email"
         type="text"
+        value="emailfalso@gmail.com"
     >
     <input
         class="form-control mb-2"
         name="password"
         placeholder="ingrese password"
         type="password"
+        value="passwordfalso"
     >
+    <input
+        class="form-control mb-2"
+        name="repassword"
+        placeholder="repita password"
+        type="password"
+        value="passwordfalso"
+    >
+    <button class="btn btn-primary" type="submit">Registrar usuario</button>
 </form>
