--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,33 +1,36 @@
-<h1>Registro de nuevos usuarios</h1>
-
-<form action="/auth/register" method="post">
-    <input
-        class="form-control mb-2"
-        name="userName"
-        placeholder="ingrese nombre"
-        type="text"
-        value="usuariofalso"
-    >
-    <input
-        class="form-control mb-2"
-        name="email"
-        placeholder="ingrese email"
-        type="text"
-        value="emailfalso@gmail.com"
-    >
-    <input
-        class="form-control mb-2"
-        name="password"
-        placeholder="ingrese password"
-        type="password"
-        value="passwordfalso"
-    >
-    <input
-        class="form-control mb-2"
-        name="repassword"
-        placeholder="repita password"
-        type="password"
-        value="passwordfalso"
-    >
-    <button class="btn btn-primary" type="submit">Registrar usuario</button>
-</form>
+<h1 class="text-center my-5">Registro de nuevos usuarios</h1>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form action="/auth/register" method="post">
+            <input
+                class="form-control mb-2"
+                name="userName"
+                placeholder="ingrese nombre"
+                type="text"
+                value="usuariofalso"
+            >
+            <input
+            class="form-control mb-2"
+            name="email"
+            placeholder="ingrese email"
+            type="text"
+            value="emailfalso@gmail.com"
+            >
+            <input
+                class="form-control mb-2"
+                name="password"
+                placeholder="ingrese password"
+                type="password"
+                value="passwordfalso"
+            >
+            <input
+                class="form-control mb-2"
+                name="repassword"
+                placeholder="repita password"
+                type="password"
+                    value="passwordfalso"
+            >
+            <button class="btn btn-primary" type="submit">Registrar usuario</button>
+        </form>
+    </div>
+</div>
