--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,21 @@
-<h1>Log In</h1>
+
+<h1 class="text-center my-5">Ingrese a su cuenta</h1>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form action="/auth/login" method="post">
+            <input
+                class="form-control mb-2"
+                name="userName"
+                placeholder="ingrese nombre"
+                type="text"
+            >
+            <input
+                class="form-control mb-2"
+                name="password"
+                placeholder="ingrese password"
+                type="password"
+            >
+            <button class="btn btn-primary" type="submit">Login</button>
+        </form>
+    </div>
+</div>
