--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,11 @@
 <body>
     {{>Navbar}}
   <div class="container mt-3">
+
+      {{#each mensajes}}
+        <div class="alert alert-dark mb-2">{{this.msg}}</div>
+    {{/each}}
+    
     {{{body}}}
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
