--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/auth/login">LogIn</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/auth/logout">LogOut</a>
+        </li>
       </ul>
     </div>
   </div>
