--- a/views/components/Form.hbs
+++ b/views/components/Form.hbs
@@ -2,7 +2,7 @@
 
 <form action="/editar/{{url._id}}" method="POST">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <input value="{{url.origin}}" type="text" placeholder="Ingrese Url" name="origenUrl" class="form-control my-2">
+    <input value="{{url.origin}}" type="text" placeholder="Ingrese Url" name="origin" class="form-control my-2">
     <button type="submit" class="btn btn-warning w-100 mb-2">Agregar Url</button>
 </form>
 
@@ -11,7 +11,7 @@
 
 <form action="/" method="POST">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <input type="text" placeholder="Ingrese Url" name="origenUrl" class="form-control my-2">
+    <input type="text" placeholder="Ingrese Url" name="origin" class="form-control my-2">
     <button type="submit" class="btn btn-primary w-100 mb-2">Agregar Url</button>
 </form>
 
