--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -8,6 +8,10 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/perfil">Perfil</a>
+        </li>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/auth/register">Register</a>
