cambiada clase de la imagen de perfil para que sea circular e instalacion de formidable y jimp

--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -1,7 +1,7 @@
 <h1 class="text-center">Nombre del Usuario</h1>
 <p class="text-center">Edite su perfil</p>
 <div class="my-2 text-center">
-    <img src="/img/perfiles/imagen.png" alt="">
+    <img src="/img/perfiles/imagen.png" alt="" class="rounded-circle">
 </div>
 
 <form action="/perfil?_csrf={{csrfToken}}" method="POST" enctype="multipart/form-data">
