--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -1,10 +1,23 @@
-<h1 class="text-center">Nombre del Usuario</h1>
+<h1 class="text-center">{{user.userName}}</h1>
 <p class="text-center">Edite su perfil</p>
-<div class="my-2 text-center">
-    <img src="/img/perfiles/imagen.png" alt="" class="rounded-circle">
+
+<div class="my-5 text-center">
+{{#if imagen}}
+
+        <img src="/img/perfiles/{{imagen}}" alt="" class="rounded-circle">
+
+    {{else}}
+
+        <img src="/img/perfiles/imagen.png" alt="" class="rounded-circle">
+
+{{/if}}
+
 </div>
 
+
+
+
 <form action="/perfil?_csrf={{csrfToken}}" method="POST" enctype="multipart/form-data">
-    <input type="file" class="form-control form-control-sm" id="formFileSm">
+    <input type="file" class="form-control form-control-sm" id="formFileSm" name="myfile">
     <button class="btn btn-dark my-3">Cambiar imagen de perfil</button>
 </form>
